# checkly-cli

./: Cargo.toml  README.md
src/: api.rs  config.rs  main.rs
